# detective-env

./: Dockerfile  README.md  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
server/: app.py
