[project]
name = "detective-openenv"
version = "1.0.0"
description = "AI Detective reasoning environment"
authors = [{ name = "Manoj Krishna" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv>=0.1.13"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:app"
